local_minikube/templates_yaml/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
  - name: app-container
    image: uopsdod/k8s-hostname-amd64-beta:v1
    ports:
    - containerPort: 80
