local_minikube/templates_yaml/simple-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-clusterip
spec:
  type: ClusterIP
  selector:
    app: app-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
