local_minikube/templates_yaml/simple-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-nodeport
spec:
  type: NodePort
  selector:
    app: app-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
