local_minikube/templates_yaml/ingress-hostname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hostname
  namespace: app-ns
spec:
  ingressClassName: nginx
  rules:
  - host: beta.demo.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: beta-app-service-clusterip
              port:
                number: 8080
  - host: prod.demo.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: prod-app-service-clusterip
              port:
                number: 8080
